--- a/KanjiRyokucha/CardFrontView.xib
+++ b/KanjiRyokucha/CardFrontView.xib
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina3_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -131,6 +128,7 @@
                 <outlet property="keywordLabel" destination="UFv-ZE-JGL" id="WNn-jM-lZI"/>
                 <outlet property="optionsButton" destination="5pW-rv-8IL" id="4rQ-1P-ZvU"/>
                 <outlet property="quitButton" destination="PsI-SZ-f41" id="PvI-3z-Jtl"/>
+                <outlet property="rootView" destination="LJ8-iV-jte" id="gA3-0N-Pts"/>
             </connections>
             <point key="canvasLocation" x="18" y="-15"/>
         </view>
